charts/templates/svc-Auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: svc-auth-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: svc-auth
  template:
    metadata:
      labels:
        app: svc-auth
    spec:
      containers:
      - name: svc-auth
        image: svc-auth:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: svc-auth
spec:
  selector:
    app: svc-auth
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: svc-auth
spec:
  hosts:
    - "*"
  gateways:
    - istio-system/default
  http:
  - match:
      - uri:
          prefix: /
    route:
      - destination:
          host: svc-auth
          port:
            number: 80
