charts/templates/svc-B.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: svc-b-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: svc-b
  template:
    metadata:
      labels:
        app: svc-b
    spec:
      containers:
      - name: svc-b
        image: svc-b:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: svc-b
spec:
  selector:
    app: svc-b
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: svc-b
spec:
  hosts:
    - "*"
  gateways:
    - istio-system/default
  http:
  - match:
      - uri:
          prefix: /svc-b
    route:
      - destination:
          host: svc-b
          port:
            number: 80
